# xiaozhi-esp32

components/agora_sdk/: CMakeLists.txt
components/aosl/: CMakeLists.txt
components/aosl/cmake/: build.cmake
components/aosl/include/api/: aosl_defs.h
components/aosl/include/kernel/: err.h
docs/: agora-rtc-integration-skills.md
main/assets/locales/en-US/: language.json
main/assets/locales/zh-CN/: language.json
main/audio/: audio_service.cc
main/boards/esp-vocat/: config.json
main/boards/m5stack-core-s3/: config.json
main/boards/m5stack-stick-s3/: config.json
main/boards/sensecap-watcher/: config.json
main/boards/waveshare/esp32-s3-touch-amoled-1.75/: config.json
main/boards/zhengchen-1.54tft-ml307/: config.json  zhengchen-1.54tft-ml307.cc
main/boards/zhengchen-1.54tft-wifi/: config.json
main/protocols/: agora_rtc_protocol.cc  agora_rtc_protocol.h
partitions/v2/: 8m_agora.csv
scripts/: build_agora_rtc.py
